# botgateway

./: README.md  pyproject.toml
.github/workflows/: ci.yml
botgateway/: __init__.py  config.py  main.py
botgateway/api/: auth.py  chat.py  health.py  mcp.py
botgateway/api/admin/: __init__.py  api_keys.py  mcp_tools.py  model_groups.py  models.py  providers.py
botgateway/cli/: botcli.py  botgateway.py  openbot.py
botgateway/cli/commands/: __init__.py  api_key.py  mcp_tool.py  model.py  model_group.py  provider.py
botgateway/core/: __init__.py  auth.py  encryptor.py  mcp_client.py  retry.py  router.py  sdk_adapter.py
botgateway/db/: __init__.py  database.py  models.py  repositories.py
docs/: CODE_REVIEW_REPORT.md  vibe-coding-v030-improvement-report.md  vibe-coding改进报告.md
docs/vibe-coding/: botgateway-design.md
docs/vibe-coding/changes/: fix-v0-3-1-code-review-progress.md  fix_bugs.md
docs/vibe-coding/changes/add-github-ci/: add-github-ci-progress.md
docs/vibe-coding/changes/archive/: fix-v0-3-1-code-review-progress.md
docs/vibe-coding/changes/archive/add-github-ci/: add-github-ci-design.md  add-github-ci-progress.md
docs/vibe-coding/changes/archive/create-v0-2-0/: create-v0-2-0-design.md
docs/vibe-coding/changes/archive/create-v0-3-0/: create-v0-3-0-design.md
docs/vibe-coding/changes/create-v0-2-0/: create-v0-2-0-progress.md
docs/vibe-coding/changes/create-v0-3-0/: create-v0-3-0-progress.md
docs/vibe-coding/changes/fix-code-review-issues/: fix-code-review-issues-design.md  fix-code-review-issues-progress.md
docs/vibe-coding/changes/fix-v0-3-1-code-review/: fix-v0-3-1-code-review-design.md
tests/: conftest.py  test_auth.py  test_botcli.py  test_botgateway.py  test_chat.py  test_config.py  test_core.py  test_db_models.py  test_e2e_mcp.py  test_health.py  test_main.py  test_mcp_api.py  test_mcp_client.py  test_mcp_models.py  test_providers.py
