[project]
name = "botgateway"
version = "0.1.0"
description = "AI Gateway for bots"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.2.0",
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
